--- a/package.json
+++ b/package.json
@@ -1,1 +1,109 @@
 {
+  "name": "@profullstack/rss-amplifier",
+  "version": "0.1.0",
+  "description": "A CLI tool for contextual RSS amplification with AI-driven snippet generation and social media posting",
+  "type": "module",
+  "main": "index.js",
+  "files": [
+    "index.js",
+    "README.md",
+    "bin",
+    "src"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/profullstack/rss-amplifier.git"
+  },
+  "bugs": {
+    "url": "https://github.com/profullstack/rss-amplifier/issues"
+  },
+  "homepage": "https://profullstack.com",
+  "scripts": {
+    "test": "mocha test/**/*.test.js",
+    "test:config": "mocha test/config-manager.test.js",
+    "test:feeds": "mocha test/feed-manager.test.js",
+    "test:snippets": "mocha test/snippet-manager.test.js",
+    "test:cli": "mocha test/cli.test.js",
+    "example": "node examples/basic-usage.js",
+    "example:import": "node examples/feed-import.js",
+    "cli": "./bin/rss-amplifier.js",
+    "setup": "./bin/rss-amplifier.js setup",
+    "import": "./bin/rss-amplifier.js import",
+    "feeds": "./bin/rss-amplifier.js feeds",
+    "snippets": "./bin/rss-amplifier.js snippets",
+    "schedule": "./bin/rss-amplifier.js schedule",
+    "lint": "eslint src/ test/ bin/ --fix",
+    "format": "prettier --write src/ test/ bin/ examples/",
+    "prepare": "husky"
+  },
+  "bin": {
+    "rss-amplifier": "./bin/rss-amplifier.js",
+    "rssamp": "./bin/rss-amplifier.js"
+  },
+  "keywords": [
+    "rss",
+    "opml",
+    "social-media",
+    "automation",
+    "ai",
+    "content-generation",
+    "mastodon",
+    "bluesky",
+    "twitter",
+    "x",
+    "linkedin",
+    "nostr",
+    "cli",
+    "contextual-marketing",
+    "snippet-generation"
+  ],
+  "author": "Profullstack, Inc.",
+  "license": "MIT",
+  "packageManager": "pnpm@10.6.5",
+  "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "cli-progress": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "inquirer": "^12.6.3",
+    "openai": "^4.67.3",
+    "yargs": "^17.7.2",
+    "node-cron": "^3.0.3",
+    "rss-parser": "^3.13.0",
+    "opml-to-json": "^1.0.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "puppeteer": "^23.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "eslint": "^8.57.0",
+    "esmock": "^2.7.0",
+    "husky": "^9.1.7",
+    "mocha": "^10.2.0",
+    "prettier": "^3.0.0",
+    "sinon": "^17.0.1",
+    "sinon-chai": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./index.js"
+    },
+    "./config-manager": {
+      "import": "./src/config-manager.js"
+    },
+    "./feed-manager": {
+      "import": "./src/feed-manager.js"
+    },
+    "./snippet-manager": {
+      "import": "./src/snippet-manager.js"
+    },
+    "./ai-service": {
+      "import": "./src/ai-service.js"
+    },
+    "./social-poster": {
+      "import": "./src/social-poster.js"
+    }
+  }
+}
