--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "rss-parser": "^3.13.0",
     "opml-to-json": "^1.0.0",
     "@supabase/supabase-js": "^2.39.0",
-    "puppeteer": "^23.9.0"
+    "@profullstack/social-poster": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
