--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "yargs": "^17.7.2",
     "node-cron": "^3.0.3",
     "rss-parser": "^3.13.0",
-    "opml-to-json": "^1.0.0",
+    "xml2js": "^0.6.2",
     "@supabase/supabase-js": "^2.39.0",
     "@profullstack/social-poster": "^1.1.0"
   },
